# talent-retention-mlops

./: .env  .gitignore  .infisical.json  README.md  Taskfile.yaml  docker-compose.yaml  pyproject.toml  run_data_validation.py
.github/workflows/: ci-pipeline.yaml  deploy-bento.yaml
bentoml/: bentofile.yaml  download_model.py  service.py
docker/: act.Dockerfile  github_runner.Dockerfile  trainer.Dockerfile
github_runner/: entrypoint.sh
notebooks/: exploration.ipynb  preprocessor_feature_names_logreg.json  preprocessor_feature_names_xgboost.json  validation_report.json
trainer/: .dockerignore  requirements.txt
trainer/pipelines/dissertation/: pipeline.py  steps.py
utils/: minio_store.py  secret_manager.py
zenml_data/pipelines/: training_pipeline.py
zenml_data/steps/: data_validator.py
