[project]
name = "talent-retention-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "great-expectations==0.17.21",
    "infisicalsdk>=1.0.8",
    "numpy==1.24.4",
    "pandas>=2.1.0",
    "pandera>=0.22.1",
    "scikit-learn>=1.6.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "kagglehub[pandas-datasets]>=0.3.12",
]
